[package]
name = "screener-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = "2.2.0"

[dev-dependencies]
odra-test = "2.2.0"

[build-dependencies]
odra-build = "2.2.0"

[[bin]]
name = "screener_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "screener_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
